fix backend to upload photos and products